--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,19 +11,19 @@ Explore the API categories below to get started.
 
 | Repository | Description | Services |
 | --- | --- | --- |
-| **Alerts** | Coralogix Alerts deliver intelligent monitoring and proactive notification across your entire observability stack, helping teams detect and respond to issues before they impact users. | • [Alert definitions service](https://docs.coralogix.com/api-reference/alert-definitions-service/overview)<br>• [Alert events service](https://docs.coralogix.com/api-reference/alert-events-service/overview) |
+| **Alerts** | Coralogix Alerts deliver intelligent monitoring and proactive notification across your entire observability stack, helping teams detect and respond to issues before they impact users. | • [Alert definitions service](https://docs.coralogix.com/api-reference/alert-definitions-service/overview)<br />• [Alert events service](https://docs.coralogix.com/api-reference/alert-events-service/overview) |
 | **Incidents** | Coralogix Incidents provide comprehensive incident management capabilities to streamline alert response and resolution workflows. | • [Incidents service](https://docs.coralogix.com/api-reference/incidents-service/overview) |
-| **Extensions** | Coralogix Extensions provide a comprehensive ecosystem of pre-built monitoring resources to accelerate observability implementation and reduce time-to-value. | • [Contextual data integration service](https://docs.coralogix.com/api-reference/contextual-data-integration-service/overview)<br>• [Extension deployment service](https://docs.coralogix.com/api-reference/extension-deployment-service/overview)<br>• [Extension service](https://docs.coralogix.com/api-reference/extension-service/overview)<br>• [Extension testing service](https://docs.coralogix.com/api-reference/extension-testing-service/overview)<br>• [Integration service](https://docs.coralogix.com/api-reference/integration-service/overview)<br>• [Outgoing webhooks service](https://docs.coralogix.com/api-reference/outgoing-webhooks-service/overview) |
-| **Dashboards** | Coralogix Dashboards deliver powerful visualization and analysis capabilities for all your observability data. | • [Dashboard folders service](https://docs.coralogix.com/api-reference/dashboard-folders-service/overview)<br>• [Dashboard service](https://docs.coralogix.com/api-reference/dashboard-service/overview) |
+| **Extensions** | Coralogix Extensions provide a comprehensive ecosystem of pre-built monitoring resources to accelerate observability implementation and reduce time-to-value. | • [Contextual data integration service](https://docs.coralogix.com/api-reference/contextual-data-integration-service/overview)<br />• [Extension deployment service](https://docs.coralogix.com/api-reference/extension-deployment-service/overview)<br />• [Extension service](https://docs.coralogix.com/api-reference/extension-service/overview)<br />• [Extension testing service](https://docs.coralogix.com/api-reference/extension-testing-service/overview)<br />• [Integration service](https://docs.coralogix.com/api-reference/integration-service/overview)<br />• [Outgoing webhooks service](https://docs.coralogix.com/api-reference/outgoing-webhooks-service/overview) |
+| **Dashboards** | Coralogix Dashboards deliver powerful visualization and analysis capabilities for all your observability data. | • [Dashboard folders service](https://docs.coralogix.com/api-reference/dashboard-folders-service/overview)<br />• [Dashboard service](https://docs.coralogix.com/api-reference/dashboard-service/overview) |
 | **Actions** | Coralogix Actions provide powerful automation capabilities that trigger workflows based on data conditions. | • [Actions](https://docs.coralogix.com/api-reference/actions-service/overview) |
 | **APM** | Coralogix APM delivers comprehensive application performance monitoring with Service Level Objective (SLO) tracking. | • [SLO service](https://docs.coralogix.com/api-reference/slos-service/overview) |
 | **Archive** | Coralogix Archive provides intelligent data lifecycle management to optimize storage costs while maintaining compliance. | • [Retentions service](https://docs.coralogix.com/api-reference/retentions-service/overview) |
 | **Data Usage** | Coralogix Data Usage provides detailed insights into your observability data consumption patterns. | • [Data Usage service](https://docs.coralogix.com/api-reference/data-usage-service/overview) |
-| **Enrichment** | Coralogix Enrichment enhances your observability data with contextual information from multiple sources. | • [Custom Enrichment service](https://docs.coralogix.com/api-reference/custom-enrichments-service/overview)<br>• [Enrichment service](https://docs.coralogix.com/api-reference/enrichments-service/overview) |
+| **Enrichment** | Coralogix Enrichment enhances your observability data with contextual information from multiple sources. | • [Custom Enrichment service](https://docs.coralogix.com/api-reference/custom-enrichments-service/overview)<br />• [Enrichment service](https://docs.coralogix.com/api-reference/enrichments-service/overview) |
 | **Logs2Metrics** | Coralogix Logs2Metrics transforms log events into actionable metrics for enhanced monitoring. | • [Events2Metric service](https://docs.coralogix.com/api-reference/events2metrics-service/overview) |
-| **Notification Center** | Coralogix Notification Center provides centralized notification management across all services. | • [Connectors service](https://docs.coralogix.com/api-reference/connectorsservice/overview)<br>• [Entities service](https://docs.coralogix.com/api-reference/entitiesservice/overview)<br>• [Global Routers service](https://docs.coralogix.com/api-reference/globalroutersservice/overview)<br>• [Presets service](https://docs.coralogix.com/api-reference/presetsservice/overview)<br>• [Testing service](https://docs.coralogix.com/api-reference/testingservice/overview) |
+| **Notification Center** | Coralogix Notification Center provides centralized notification management across all services. | • [Connectors service](https://docs.coralogix.com/api-reference/connectorsservice/overview)<br />• [Entities service](https://docs.coralogix.com/api-reference/entitiesservice/overview)<br />• [Global Routers service](https://docs.coralogix.com/api-reference/globalroutersservice/overview)<br />• [Presets service](https://docs.coralogix.com/api-reference/presetsservice/overview)<br />• [Testing service](https://docs.coralogix.com/api-reference/testingservice/overview) |
 | **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. | • [Team Permissions Management service](https://docs.coralogix.com/api-reference/team-permissions-management-service/overview) |
 | **Quota** | Coralogix Quota provides resource allocation and usage enforcement to optimize platform utilization. | • [Policies service](https://docs.coralogix.com/api-reference/policies-service/overview) |
 | **Scopes** | Coralogix Scopes provide data isolation and access control through logical data partitioning. | • [Scopes service](https://docs.coralogix.com/api-reference/scopes-service/overview) |
-| **Views** | Coralogix Views allow you to save and organize filtered data queries for fast access and shared analysis. | • [Views service](https://docs.coralogix.com/api-reference/views-service/list-views-service/overview)<br>• [Views folder service](https://docs.coralogix.com/api-reference/folders-for-views-service/overview) |
+| **Views** | Coralogix Views allow you to save and organize filtered data queries for fast access and shared analysis. | • [Views service](https://docs.coralogix.com/api-reference/views-service/list-views-service/overview)<br />• [Views folder service](https://docs.coralogix.com/api-reference/folders-for-views-service/overview) |
 | **Rule Groups** | Coralogix Rule Groups allow you to organize and manage log parsing rules in structured, ordered collections. | • [Rule Groups service](https://docs.coralogix.com/api-reference/rule-groups-service/overview) |
