Add missing service overviews

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -22,8 +22,9 @@ Explore the API categories below to get started.
 | **Enrichment** | Coralogix Enrichment enhances your observability data with contextual information from multiple sources. | • [Custom Enrichment service](https://docs.coralogix.com/api-reference/custom-enrichments-service/overview)<br />• [Enrichment service](https://docs.coralogix.com/api-reference/enrichments-service/overview) |
 | **Logs2Metrics** | Coralogix Logs2Metrics transforms log events into actionable metrics for enhanced monitoring. | • [Events2Metric service](https://docs.coralogix.com/api-reference/events2metrics-service/overview) |
 | **Notification Center** | Coralogix Notification Center provides centralized notification management across all services. | • [Connectors service](https://docs.coralogix.com/api-reference/connectorsservice/overview)<br />• [Entities service](https://docs.coralogix.com/api-reference/entitiesservice/overview)<br />• [Global Routers service](https://docs.coralogix.com/api-reference/globalroutersservice/overview)<br />• [Presets service](https://docs.coralogix.com/api-reference/presetsservice/overview)<br />• [Testing service](https://docs.coralogix.com/api-reference/testingservice/overview) |
-| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. | • [Team Permissions Management service](https://docs.coralogix.com/api-reference/team-permissions-management-service/overview) |
+| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. | • [Team Permissions Management service](https://docs.coralogix.com/api-reference/team-permissions-management-service/overview)<br />• [SAML Configuration] |
 | **Quota** | Coralogix Quota provides resource allocation and usage enforcement to optimize platform utilization. | • [Policies service](https://docs.coralogix.com/api-reference/policies-service/overview) |
 | **Scopes** | Coralogix Scopes provide data isolation and access control through logical data partitioning. | • [Scopes service](https://docs.coralogix.com/api-reference/scopes-service/overview) |
 | **Views** | Coralogix Views allow you to save and organize filtered data queries for fast access and shared analysis. | • [Views service](https://docs.coralogix.com/api-reference/views-service/list-views-service/overview)<br />• [Views folder service](https://docs.coralogix.com/api-reference/folders-for-views-service/overview) |
 | **Rule Groups** | Coralogix Rule Groups allow you to organize and manage log parsing rules in structured, ordered collections. | • [Rule Groups service](https://docs.coralogix.com/api-reference/rule-groups-service/overview) |
+| **Recording Rules** | Coralogix Recording Rules let you define PromQL-based expressions that are periodically evaluated and stored as new time series for downstream analysis. Recording rules help optimize performance by precomputing frequently used queries and metrics. The API supports full CRUD operations for rule groups and rule group sets, including versioned updates and interval-based scheduling. | • [Recording Rules service](https://docs.coralogix.com/api-reference/recording-rules-service/overview) |
