--- a/service-overviews-latest/scopes-service-overview.mdx
+++ b/service-overviews-latest/scopes-service-overview.mdx
@@ -1,9 +1,6 @@
 # Scopes service overview
 
-
-
-
-
+The Scopes Service provides API capabilities to manage data scopes within Coralogix, enabling fine-grained segmentation of logs and metrics for specific teams, applications, or services. A scope defines a logical boundary using entity filters and expressions, allowing for controlled visibility, permissions, and team-specific access. This service allows users to create, retrieve (individually or in bulk), update, and delete scopes tied to a team. Each scope includes metadata such as a display name, description, team ID, and customizable filters targeting specific entity types. 
 
 
 ## Constants
