--- a/service-overviews-lts/custom-enrichments-service-overview.mdx
+++ b/service-overviews-lts/custom-enrichments-service-overview.mdx
@@ -1,20 +1,4 @@
 # Custom Enrichment overview
 
-
-
-
-
-## Available methods
-
-| Method                        |
-|-------------------------------|
-| [GetCustomEnrichment](https://docs.coralogix.com/api-reference/custom-enrichments-service/get-custom-enrichment) |
-| [GetCustomEnrichments](https://docs.coralogix.com/api-reference/custom-enrichments-service/get-custom-enrichments) |
-| [CreateCustomEnrichments](https://docs.coralogix.com/api-reference/custom-enrichments-service/create-custom-enrichments) |
-| [UpdateCustomEnrichment](https://docs.coralogix.com/api-reference/custom-enrichments-service/update-custom-enrichment) |
-| [DeleteCustomEnrichments](https://docs.coralogix.com/api-reference/custom-enrichments-service/delete-custom-enrichments) |
-| [SearchCustomEnrichmentData](https://docs.coralogix.com/api-reference/custom-enrichments-service/search-custom-enrichment-data) |
-
-
-
+The Custom Enrichment Service enables users to manage and query custom enrichment rules, which augment log and event data with external metadata. Using this service, you can create enrichments by uploading data files (e.g., CSV or binary formats), associate them with a name and optional description, and retrieve or modify their configuration. You can also list all enrichments, search enrichment contents by name or ID, and delete them. This functionality allows for tailored, organization-specific enrichment workflows that enhance observability and context in Coralogix logs and metrics pipelines.
 
