--- a/service-overviews-lts/enrichments-service-overview.mdx
+++ b/service-overviews-lts/enrichments-service-overview.mdx
@@ -1,6 +1,6 @@
 # Enrichment overview
 
-
+The Enrichment Service allows users to manage rule-based enrichments that dynamically add contextual metadata to log and metric data. It supports operations to create, retrieve, and delete enrichments, as well as view enrichment limits and company-wide settings. Users can add individual enrichments, overwrite enrichments of a specific type atomically, and enforce usage limits. This service is essential for implementing structured enrichment strategies at scale, improving the precision and depth of observability data.
 
 
 
