--- a/service-overviews-lts/events2metrics-service-overview.mdx
+++ b/service-overviews-lts/events2metrics-service-overview.mdx
@@ -1,9 +1,6 @@
-# Events2Metric Service overview
+# Events2Metrics Service overview
 
-
-
-
-
+Coralogix Events2Metrics transforms log and span events into time-series metrics, allowing teams to build metrics pipelines directly from event data. The API provides complete lifecycle management of E2M definitions, including creation, replacement, retrieval, listing, and deletion. It also supports atomic batch operations to ensure reliable and ordered updates across multiple E2M rules.
 
 
 ## Constants
