Use version from navigation file instead of hard-coded one

--- a/api-reference/lts/team-permissions-management-service/overview.mdx
+++ b/api-reference/lts/team-permissions-management-service/overview.mdx
@@ -1,8 +1,6 @@
-# Team Permissions Management Service overview
+# Team Permissions Management service overview
 
-
-
-
+The Team Permissions Management service manages team-based access control and permissions in Coralogix. It provides comprehensive functionality for creating and administering team groups, user assignments, role associations, and scope configurations.
 
 
 
