--- a/api-reference/latest/api-keys-service/overview.mdx
+++ b/api-reference/latest/api-keys-service/overview.mdx
@@ -1,7 +1,6 @@
-# Team Permissions Management service overview
+# API Keys service overview
 
-The Team Permissions Management service manages team-based access control and permissions in Coralogix. It provides comprehensive functionality for creating and administering team groups, user assignments, role associations, and scope configurations.
-
+Coralogix API Keys provide secure, fine-grained access control for all platform APIs, enabling safe and auditable integrations with third-party systems, CI/CD pipelines, and automation scripts. The API Keys API allows users to programmatically create, retrieve, update, and delete API keys, each scoped with specific permissions or permission presets. Keys can be assigned to users, teams, or organizations, and tailored with granular read/write permissions across various services.
 
 
 ## Constants
