--- a/api-reference/lts/saml-configuration-service/overview.mdx
+++ b/api-reference/lts/saml-configuration-service/overview.mdx
@@ -1,7 +1,6 @@
-# Team Permissions Management service overview
+# SAML Configuration Service Overview
 
-The Team Permissions Management service manages team-based access control and permissions in Coralogix. It provides comprehensive functionality for creating and administering team groups, user assignments, role associations, and scope configurations.
-
+The Coralogix SAML Configuration API enables secure setup and management of SAML-based Single Sign-On (SSO) for team authentication. This API allows you to programmatically retrieve and configure both service provider (SP) and identity provider (IDP) parameters, activate or deactivate SSO, and view current authentication settings. It supports secure, team-scoped operations for full lifecycle control of your SAML integration.
 
 
 ## Constants
