--- a/introduction.mdx
+++ b/introduction.mdx
@@ -17,13 +17,14 @@ Explore the API categories below to get started.
 | **Dashboards** | Coralogix Dashboards deliver powerful visualization and analysis capabilities for all your observability data. |  [Dashboard folders](https://docs.coralogix.com/api-reference/dashboard-folders-service/overview)<br /> [Dashboard](https://docs.coralogix.com/api-reference/dashboard-service/overview) |
 | **Actions** | Coralogix Actions provide powerful automation capabilities that trigger workflows based on data conditions. |  [Actions](https://docs.coralogix.com/api-reference/actions-service/overview) |
 | **APM** | Coralogix APM delivers comprehensive application performance monitoring with Service Level Objective (SLO) tracking. |  [SLO](https://docs.coralogix.com/api-reference/slos-service/overview) |
-| **Archive** | Coralogix Archive provides intelligent data lifecycle management to optimize storage costs while maintaining compliance. |  [Retentions](https://docs.coralogix.com/api-reference/retentions-service/overview) |
+| **Archive** | Coralogix Archive provides intelligent data lifecycle management to optimize storage costs while maintaining compliance. |  [Retentions](https://docs.coralogix.com/api-reference/retentions-service/overview)<br /> [Target](https://docs.coralogix.com/api-reference/target-service/overview) |
 | **Data Usage** | Coralogix Data Usage provides detailed insights into your observability data consumption patterns. |  [Data Usage](https://docs.coralogix.com/api-reference/data-usage-service/overview) |
 | **Enrichment** | Coralogix Enrichment enhances your observability data with contextual information from multiple sources. |  [Custom Enrichments](https://docs.coralogix.com/api-reference/custom-enrichments-service/overview)<br /> [Enrichment service](https://docs.coralogix.com/api-reference/enrichments-service/overview) |
 | **Logs2Metrics** | Coralogix Logs2Metrics transforms log events into actionable metrics for enhanced monitoring. |  [Events2Metrics](https://docs.coralogix.com/api-reference/events2metrics-service/overview) |
-| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. |  [Team Permissions Management](https://docs.coralogix.com/api-reference/team-permissions-management-service/overview)<br /> [SAML Configuration](https://docs.coralogix.com/api-reference/saml-configuration-service/overview) |
+| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. |  [API Keys](https://docs.coralogix.com/api-reference/api-keys-service/overview)<br /> [Team Permissions Management](https://docs.coralogix.com/api-reference/team-permissions-management-service/overview)<br /> [SAML Configuration](https://docs.coralogix.com/api-reference/saml-configuration-service/overview) |
 | **Quota** | Coralogix Quota provides resource allocation and usage enforcement to optimize platform utilization. |  [Policies](https://docs.coralogix.com/api-reference/policies-service/overview) |
 | **Scopes** | Coralogix Scopes provide data isolation and access control through logical data partitioning. |  [Scopes](https://docs.coralogix.com/api-reference/scopes-service/overview) |
 | **Views** | Coralogix Views allow you to save and organize filtered data queries for fast access and shared analysis. |  [Views](https://docs.coralogix.com/api-reference/views-service/list-views-service/overview)<br /> [View folders](https://docs.coralogix.com/api-reference/folders-for-views-service/overview) |
 | **Rule Groups** | Coralogix Rule Groups allow you to organize and manage log parsing rules in structured, ordered collections. |  [Rule Groups](https://docs.coralogix.com/api-reference/rule-groups-service/overview) |
 | **Recording Rules** | Coralogix Recording Rules let you define PromQL-based expressions that are periodically evaluated and stored as new time series for downstream analysis. Recording rules help optimize performance by precomputing frequently used queries and metrics. The API supports full CRUD operations for rule groups and rule group sets, including versioned updates and interval-based scheduling. |  [Recording Rules](https://docs.coralogix.com/api-reference/recording-rules-service/overview) |
+| **Events** | Coralogix Events exposes historical data about triggered incidents. It enables teams to query, paginate, and analyze alert event occurrences. | [Events](https://docs.coralogix.com/api-reference/events-service/overview) |
