--- a/service-overviews-latest/saml-configuration-service-overview.mdx
+++ b/service-overviews-latest/saml-configuration-service-overview.mdx
@@ -1,4 +1,4 @@
-# SAML Configuration Service Overview
+# SAML Configuration service overview
 
 The Coralogix SAML Configuration API enables secure setup and management of SAML-based Single Sign-On (SSO) for team authentication. This API allows you to programmatically retrieve and configure both service provider (SP) and identity provider (IDP) parameters, activate or deactivate SSO, and view current authentication settings. It supports secure, team-scoped operations for full lifecycle control of your SAML integration.
 
