--- a/service-overviews-lts/recording-rules-service-overview.mdx
+++ b/service-overviews-lts/recording-rules-service-overview.mdx
@@ -1,4 +1,4 @@
-# Recording Rules Service overview
+# Recording Rules service overview
 
 Coralogix Recording Rules enable you to define and manage PromQL-based transformations that generate new metrics from existing time series. The API supports full CRUD operations for rule groups and group sets, allowing you to schedule evaluations, apply label modifications, and optimize metric usage with limits and grouping logic.
 
