--- a/introduction-lts.mdx
+++ b/introduction-lts.mdx
@@ -7,6 +7,8 @@ Coralogix offers a robust set of APIs designed to help you send observability da
 
 Explore the API categories below to get started.
 
+You can download the API spec from https://api.coralogix.com/mgmt/openapi/openapi.yaml.
+
 ## API Overview
 
 | Repository | Description | Services |
