--- a/api-reference/latest/api-keys-service/get-"send-data"-api-keys.mdx
+++ b/api-reference/latest/api-keys-service/get-"send-data"-api-keys.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v3/api_keys/send_data
+openapi: /../../openapi_latest.yaml get /aaa/api-keys/v3/send_data
 ---
