--- a/api-reference/latest/api-keys-service/update-api-key.mdx
+++ b/api-reference/latest/api-keys-service/update-api-key.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v3/api_keys/{key_id}
+openapi: /../../openapi_latest.yaml put /aaa/api-keys/v3/{key_id}
 ---
