--- a/api-reference/latest/dashboard-folders-service/create-a-dashboard-folder.mdx
+++ b/api-reference/latest/dashboard-folders-service/create-a-dashboard-folder.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/dashboards/folders
+openapi: /../../openapi_latest.yaml post /dashboards/dashboards/v1/folders
 ---
