--- a/api-reference/latest/dashboard-folders-service/get-a-dashboard-folder.mdx
+++ b/api-reference/latest/dashboard-folders-service/get-a-dashboard-folder.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/dashboards/folders/{folder_id}
+openapi: /../../openapi_latest.yaml get /dashboards/dashboards/v1/folders/{folder_id}
 ---
