--- a/api-reference/latest/dashboard-folders-service/list-dashboard-folders.mdx
+++ b/api-reference/latest/dashboard-folders-service/list-dashboard-folders.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/dashboards/folders
+openapi: /../../openapi_latest.yaml get /dashboards/dashboards/v1/folders
 ---
