--- a/api-reference/latest/dashboard-folders-service/replace-a-dashboard-folder.mdx
+++ b/api-reference/latest/dashboard-folders-service/replace-a-dashboard-folder.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v1/dashboards/folders
+openapi: /../../openapi_latest.yaml put /dashboards/dashboards/v1/folders
 ---
