--- a/api-reference/latest/dashboard-service/get-dashboard-catalog.mdx
+++ b/api-reference/latest/dashboard-service/get-dashboard-catalog.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/dashboards/catalog
+openapi: /../../openapi_latest.yaml get /dashboards/dashboards/v1/catalog
 ---
