--- a/api-reference/latest/saml-configuration-service/activatedeactivate-saml.mdx
+++ b/api-reference/latest/saml-configuration-service/activatedeactivate-saml.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/sso/saml/active
+openapi: /../../openapi_latest.yaml post /aaa/team-saml/v1/active
 ---
