--- a/api-reference/latest/team-permissions-management-service/add-users-to-team-group.mdx
+++ b/api-reference/latest/team-permissions-management-service/add-users-to-team-group.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/teams/groups/{group_id.id}/users
+openapi: /../../openapi_latest.yaml post /aaa/team-groups/v1/{group_id.id}/users
 ---
