--- a/api-reference/latest/team-permissions-management-service/add-users-to-team-groups.mdx
+++ b/api-reference/latest/team-permissions-management-service/add-users-to-team-groups.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/teams/groups/users
+openapi: /../../openapi_latest.yaml post /aaa/team-groups/v1/users
 ---
