--- a/api-reference/latest/team-permissions-management-service/get-team-groups.mdx
+++ b/api-reference/latest/team-permissions-management-service/get-team-groups.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/teams/groups/list
+openapi: /../../openapi_latest.yaml get /aaa/team-groups/v1
 ---
