--- a/api-reference/latest/data-usage-service/get-daily-usage-units.mdx
+++ b/api-reference/latest/data-usage-service/get-daily-usage-units.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v2/datausage/daily/units
+openapi: /../../openapi_latest.yaml post /dataplans/data-usage/v2/daily:units
 ---
