--- a/api-reference/latest/incidents-service/get-multiple-incidents-by-ids.mdx
+++ b/api-reference/latest/incidents-service/get-multiple-incidents-by-ids.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:batchGet
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/batch
 ---
