--- a/api-reference/latest/retentions-service/get-retentions.mdx
+++ b/api-reference/latest/retentions-service/get-retentions.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/retentions
+openapi: /../../openapi_latest.yaml get /dataengine/retention-tags/v1
 ---
