--- a/api-reference/latest/bulkdeleterulegroup.mdx
+++ b/api-reference/latest/bulkdeleterulegroup.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /api/v1/rulegroups
+openapi: /../../openapi_latest.yaml delete /parsing-rules/rule-groups/v1
 ---
