--- a/api-reference/latest/createrulegroup.mdx
+++ b/api-reference/latest/createrulegroup.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /api/v1/rulegroups
+openapi: /../../openapi_latest.yaml post /parsing-rules/rule-groups/v1
 ---
