--- a/api-reference/latest/data-usage-service/get-daily-usage-evaluation-tokens.mdx
+++ b/api-reference/latest/data-usage-service/get-daily-usage-evaluation-tokens.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v2/datausage/daily/evaluation_tokens
+openapi: /../../openapi_latest.yaml post /dataplans/data-usage/v2/daily:evaluation-tokens
 ---
