--- a/api-reference/latest/data-usage-service/get-daily-usage-processed-gbs.mdx
+++ b/api-reference/latest/data-usage-service/get-daily-usage-processed-gbs.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v2/datausage/daily/processed_gbs
+openapi: /../../openapi_latest.yaml post /dataplans/data-usage/v2/daily:processed-gbs
 ---
