--- a/api-reference/latest/data-usage-service/get-spans-count.mdx
+++ b/api-reference/latest/data-usage-service/get-spans-count.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v2/datausage/spanscount
+openapi: /../../openapi_latest.yaml get /dataplans/data-usage/v2/spans:count
 ---
