--- a/api-reference/latest/deleterulegroup.mdx
+++ b/api-reference/latest/deleterulegroup.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /api/v1/rulegroups/{group_id}
+openapi: /../../openapi_latest.yaml delete /parsing-rules/rule-groups/v1/{group_id}
 ---
