--- a/api-reference/latest/events2metrics-service/create-a-new-e2m.mdx
+++ b/api-reference/latest/events2metrics-service/create-a-new-e2m.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /api/v2/events2metrics
+openapi: /../../openapi_latest.yaml post /events2metrics/events2metrics/v2
 ---
