--- a/api-reference/latest/events2metrics-service/delete-an-e2m.mdx
+++ b/api-reference/latest/events2metrics-service/delete-an-e2m.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /api/v2/events2metrics/{id}
+openapi: /../../openapi_latest.yaml delete /events2metrics/events2metrics/v2/{id}
 ---
