--- a/api-reference/latest/events2metrics-service/list-e2m-labels-cardinality.mdx
+++ b/api-reference/latest/events2metrics-service/list-e2m-labels-cardinality.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /api/v2/events2metrics/labels_cardinality
+openapi: /../../openapi_latest.yaml get /events2metrics/events2metrics/v2/labels:cardinality
 ---
