--- a/api-reference/latest/events2metrics-service/replace-an-e2m.mdx
+++ b/api-reference/latest/events2metrics-service/replace-an-e2m.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /api/v2/events2metrics
+openapi: /../../openapi_latest.yaml put /events2metrics/events2metrics/v2
 ---
