--- a/api-reference/latest/extension-deployment-service/deploy-extension.mdx
+++ b/api-reference/latest/extension-deployment-service/deploy-extension.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/extension-deployment/deploy
+openapi: /../../openapi_latest.yaml put /integrations/extensions/v1/deployed
 ---
