--- a/api-reference/latest/extension-deployment-service/revert-deployment-of-extension.mdx
+++ b/api-reference/latest/extension-deployment-service/revert-deployment-of-extension.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/extension-deployment/undeploy
+openapi: /../../openapi_latest.yaml delete /integrations/extensions/v1/deployed
 ---
