--- a/api-reference/latest/extension-service/get-all-extensions.mdx
+++ b/api-reference/latest/extension-service/get-all-extensions.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/extensions/all
+openapi: /../../openapi_latest.yaml post /integrations/extensions/v1/all
 ---
