--- a/api-reference/latest/extension-service/get-extension-by-id.mdx
+++ b/api-reference/latest/extension-service/get-extension-by-id.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/extensions/{id}
+openapi: /../../openapi_latest.yaml get /integrations/extensions/v1/{id}
 ---
