--- a/api-reference/latest/extension-testing-service/cleanup-testing-extension.mdx
+++ b/api-reference/latest/extension-testing-service/cleanup-testing-extension.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/extensions-testing/cleanup
+openapi: /../../openapi_latest.yaml delete /integrations/extensions/v1/testing
 ---
