--- a/api-reference/latest/getrulegroup.mdx
+++ b/api-reference/latest/getrulegroup.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /api/v1/rulegroups/{group_id}
+openapi: /../../openapi_latest.yaml get /parsing-rules/rule-groups/v1/{group_id}
 ---
