--- a/api-reference/latest/incidents-service/assign-incidents-to-a-user.mdx
+++ b/api-reference/latest/incidents-service/assign-incidents-to-a-user.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:assign
+openapi: /../../openapi_latest.yaml post /incidents/incidents/v1/by-user
 ---
