--- a/api-reference/latest/incidents-service/close-incidents.mdx
+++ b/api-reference/latest/incidents-service/close-incidents.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:close
+openapi: /../../openapi_latest.yaml post /incidents/incidents/v1/close
 ---
