--- a/api-reference/latest/incidents-service/get-available-filter-values.mdx
+++ b/api-reference/latest/incidents-service/get-available-filter-values.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:get-filter-values
+openapi: /../../openapi_latest.yaml post /incidents/incidents/v1/filter-values
 ---
