--- a/api-reference/latest/incidents-service/get-available-incident-event-filter-values.mdx
+++ b/api-reference/latest/incidents-service/get-available-incident-event-filter-values.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:list-incident-events-filter-values
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/events/filter-values
 ---
