--- a/api-reference/latest/incidents-service/get-incident-by-event-id.mdx
+++ b/api-reference/latest/incidents-service/get-incident-by-event-id.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/incidents/by:event/{event_id}
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/events/{event_id}
 ---
