--- a/api-reference/latest/incidents-service/get-incident-by-id.mdx
+++ b/api-reference/latest/incidents-service/get-incident-by-id.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/incidents/{id}
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/{id}
 ---
