--- a/api-reference/latest/incidents-service/get-incident-events.mdx
+++ b/api-reference/latest/incidents-service/get-incident-events.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/incidents/{incident_id}/events
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/{incident_id}/events
 ---
