--- a/api-reference/latest/incidents-service/list-incident-events-with-filters.mdx
+++ b/api-reference/latest/incidents-service/list-incident-events-with-filters.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:list-incident-events
+openapi: /../../openapi_latest.yaml get /incidents/incidents/v1/events
 ---
