--- a/api-reference/latest/incidents-service/remove-incident-user-assignments.mdx
+++ b/api-reference/latest/incidents-service/remove-incident-user-assignments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:unassign
+openapi: /../../openapi_latest.yaml delete /incidents/incidents/v1/by-user
 ---
