--- a/api-reference/latest/incidents-service/resolve-incident-by-event-id.mdx
+++ b/api-reference/latest/incidents-service/resolve-incident-by-event-id.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/by:event/incidents:resolve/{event_id}
+openapi: /../../openapi_latest.yaml post /incidents/incidents/v1/events/{event_id}/resolve
 ---
