--- a/api-reference/latest/incidents-service/resolve-incidents.mdx
+++ b/api-reference/latest/incidents-service/resolve-incidents.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/incidents:resolve
+openapi: /../../openapi_latest.yaml post /incidents/incidents/v1/resolve
 ---
