--- a/api-reference/latest/integration-service/get-all-integrations.mdx
+++ b/api-reference/latest/integration-service/get-all-integrations.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/integrations
+openapi: /../../openapi_latest.yaml get /integrations/integrations/v1
 ---
