--- a/api-reference/latest/integration-service/get-integration-details.mdx
+++ b/api-reference/latest/integration-service/get-integration-details.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/integrations/{id}
+openapi: /../../openapi_latest.yaml get /integrations/integrations/v1/{id}
 ---
