--- a/api-reference/latest/listrulegroups.mdx
+++ b/api-reference/latest/listrulegroups.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /api/v1/rulegroups
+openapi: /../../openapi_latest.yaml get /parsing-rules/rule-groups/v1
 ---
