--- a/api-reference/latest/outgoing-webhooks-service/get-outgoing-webhook.mdx
+++ b/api-reference/latest/outgoing-webhooks-service/get-outgoing-webhook.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/outgoing-webhooks/{id}
+openapi: /../../openapi_latest.yaml get /integrations/webhooks/v1/{id}
 ---
