--- a/api-reference/latest/outgoing-webhooks-service/list-outgoing-webhooks.mdx
+++ b/api-reference/latest/outgoing-webhooks-service/list-outgoing-webhooks.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/outgoing-webhooks
+openapi: /../../openapi_latest.yaml get /integrations/webhooks/v1
 ---
