--- a/api-reference/latest/outgoing-webhooks-service/update-an-outgoing-webhook.mdx
+++ b/api-reference/latest/outgoing-webhooks-service/update-an-outgoing-webhook.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v1/outgoing-webhooks
+openapi: /../../openapi_latest.yaml put /integrations/webhooks/v1
 ---
