--- a/api-reference/latest/retentions-service/update-retentions.mdx
+++ b/api-reference/latest/retentions-service/update-retentions.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/retentions
+openapi: /../../openapi_latest.yaml post /dataengine/retention-tags/v1
 ---
