--- a/api-reference/latest/updaterulegroup.mdx
+++ b/api-reference/latest/updaterulegroup.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /api/v1/rulegroups/{group_id}
+openapi: /../../openapi_latest.yaml put /parsing-rules/rule-groups/v1/{group_id}
 ---
