--- a/api-reference/latest/team-permissions-management-service/get-team-group-by-name.mdx
+++ b/api-reference/latest/team-permissions-management-service/get-team-group-by-name.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /aaa/team-groups/v1/{name}
+openapi: /../../openapi_latest.yaml get /aaa/team-groups/v1/name/{name}
 ---
